# edda

./: .gitignore  Cargo.toml  README.md  eddap.sublime-project  grammar
edda/: Cargo.toml
edda/old_src/: lib.rs  parser.rs  token.rs
edda/old_src/vm/: chunk.rs  mod.rs  stack.rs
edda/src/: ast.rs  environment.rs  interpreter.rs  lib.rs  parser.rs  scanner.rs  token.rs  typer.rs  value.rs
edda/src/ast/: expressions.rs  mod.rs  statements.rs
edda/src/vm/: bytecode.rs  chunk.rs  compiler.rs  debug.rs  errors.rs  function.rs  mod.rs  stack.rs
eddacmd/: Cargo.toml
eddacmd/src/: main.rs
eddagui/: Cargo.toml
eddagui/src/: main.rs  support.rs
eddatypes/: Cargo.toml
eddatypes/src/: main.rs
examples/: bindings.edda  fibonacci.edda  helloworld.edda  parse_error.edda  traits.edda
